--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".MainActivity"
     >
 
@@ -17,6 +18,40 @@
       android:text="开始"
       android:textColor="@android:color/white"
       android:onClick="begin"
+      />
+
+  <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="10dp"
+      android:padding="10dp"
+      android:gravity="center"
+      android:background="@color/colorPrimary"
+      android:text="暂停"
+      android:textColor="@android:color/white"
+      android:onClick="pause"
+      />
+
+  <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="10dp"
+      android:padding="10dp"
+      android:gravity="center"
+      android:background="@color/colorPrimary"
+      android:text="播放"
+      android:textColor="@android:color/white"
+      android:onClick="resume"
+      />
+
+  <TextView
+      android:id="@+id/tv_time"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="10dp"
+      android:padding="10dp"
+      android:gravity="center"
+      android:textColor="@android:color/black"
       />
 
 </LinearLayout>
