--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,6 +44,19 @@
       android:onClick="resume"
       />
 
+
+  <TextView
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="10dp"
+      android:padding="10dp"
+      android:gravity="center"
+      android:background="@color/colorPrimary"
+      android:text="停止"
+      android:textColor="@android:color/white"
+      android:onClick="stop"
+      />
+
   <TextView
       android:id="@+id/tv_time"
       android:layout_width="match_parent"
